...
}

@Preview
@Composable
private fun ModalEditActionPreview() {
    ModalAction(
        primaryText = "수정",
        isPrimaryEnabled = true,
        onDismissRequest = {},
        onPrimaryClick = {},
        extraAction = {
            ModalDeleteAction(onDeleteClick = {})
        },
...
